# pysurv-dev

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
sample data/: ctrl_2D.csv  meas_2D.csv
src/pysurv/: __init__.py  config.py  project.py  project_factory.py
src/pysurv/adjustment/: __init__.py  _constants.py  adjustment.py  adjustment_config.py  adjustment_iteration.py  adjustment_matrices.py  adjustment_method_manager.py  adjustment_solver.py  config_adjustment.py  config_sigma.py  config_solver.py  constants.py  dense_iteration.py  dense_matrices.py  iteration.py  iteration_dense.py  lsq_matrices.py  lsq_solver.py  matrices.py  matrices_dense.py  method_manager.py  method_manager_adjustment.py  method_manager_robust.py  observation_equations.py  report.py  robust.py  sigma_config.py  solver.py  solver_config.py
src/pysurv/basic/: __init__.py  basic.py
src/pysurv/data/: __init__.py  angular_dataset.py  controls.py  dataset.py  measurements.py  stations.py
src/pysurv/exceptions/: __init__.py  _exceptions.py  exceptions.py
src/pysurv/models/: __init__.py  (+1 more)
tests/: conftest.py  controls.csv  measurements.csv  test_adjustment.py  test_basic.py  test_config.py  test_config_sigma.py  test_controls.py  test_csv_reader.py  test_dataset.py  test_dense_iteration.py  test_dense_matrices.py  test_iteration_dense.py  test_matrices_dense.py  test_measurements.py  test_method_manager.py  test_method_manager_robust.py  test_project.py  test_sigma_config.py  test_solver.py  test_stations.py  test_strategy_matrix_xyw_sw_factory.py  test_validators.py
(+67 files in other folders)
